
   - addDefaultServant
   - removeDefaultServant
   - findDefaultServant

  These methods provide a simpler way of using default servants in
  Ice. Please refer to the manual for more information.

- Using the --depend option with Slice compilers that support it no 
  longer outputs dependency info even if the Slice file itself 
  contains errors.


C++ Changes
============

- On Windows it is now possible to build the Ice DLLs with unique names
  for each supported compiler. See UNIQUE_DLL_NAMES setting in 
  cpp/config/Make.rules.mak.

- The Ice DLLs no longer all use the default base load address.

- Changed the signature of the Ice::Service start method.

- Added new static methods to initialize an IceUtil::Time class from
  a double:

  IceUtil::Time::secondsDouble(double)
  IceUtil::Time::milliSecondsDouble(double)
  IceUtil::Time::microSecondsDouble(double)

- Added the ability to use alternative database storage for IceStorm
  and IceGrid other than Freeze. The following SQL databases are 
  supported: SQLite, PostgresSQL, MySQL and SQL Server. Please see
  the manual for more information.

- Fixed a bug where globally scoped garbage collected class pointers
  could cause a crash on application termination.

- Fixed a bug where an SSL connection was rejected because of a
  certificate validation failure even if IceSSL.VerifyPeer=0.

- Added ice_stackTrace() method to Exception classes, which returns
  the exception stack trace on platforms/compilers that support it.
  Currently this is only supported with the GCC compiler.

- Added new property, Ice.PrintStackTraces, which controls whether the
  Ice logger utility classes (Ice::Trace, Ice::Warning, etc) print the
  stack trace for Ice exceptions. By default it is enabled for debug
  builds and disabled for release builds.

- Removed AMD_Array_Object_ice_invoke class and instead added an
  ice_response method to AMD_Object_ice_invoke that uses the array
  type.
